--- a/style.css
+++ b/style.css
@@ -1,150 +1,206 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@font-face {
+    font-family: 'Android';
+    src: url(fontes/idroid.otf) format('opentype');
+    font-weight: normal;
+}
+
+
+/*Podemos criar variáveis no CSS usando o comando :root*/
+:root{
+    --cor0: #c5ebd6;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e; 
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', cursive;
+    --fonte-android: 'Android', cursive;
+}
+
 *{
-    text-decoration: none;
     margin: 0px;
+    padding: 0px;
 }
 
-@font-face{
-    font-family: leon;
-    src: url(fontes/idroid-webfont.woff);
+body{
+    background-color:var(--cor0);
+    font-family: var(--fonte-padrao);
 }
 
-/*Configurações do cabeçalho*/
-
+.externo::after{
+    content: '\00a0\↗';
+}
 
 header{
-    background-image: linear-gradient(180deg, #3CDA83,#1D683E);
-    height: 160px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    min-height: 150px;
+    text-align: center;
+    padding-top: 30px;
 }
 
 header > h1{
     color: white;
-    margin: auto;
+    font-size: 3em;
+    font-weight: normal;
+    font-family: var(--fonte-destaque);
+    margin-bottom: 10px;
+    text-shadow: 2px 2px 15px rgba(0, 0, 0, 0.501);
 }
 
 header > p{
-    color: rgb(214, 214, 214);
-    width: 350px;
-    padding-bottom: 10px;
-    text-align: center;
-    margin: auto;
-}
-
-header > nav{
-    width: 450px;
-    padding-top: 10px;
-    padding-bottom: 8px;
-}
-
-header > nav > a{
     color: white;
-    margin: 15px;
-    padding: 4px;
+    font-size: 1.2em;
+    font-family: var(--fonte-padrao);
+    max-width: 500px;
+    margin: auto;
+    text-shadow: 2px 2px 15px rgba(0, 0, 0, 0.333);
 }
 
-a:hover{
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.111);
-    padding: 3px;
-    transition: all .05s ease;
+nav{
+    background-color: var(--cor5);
+    padding: 10px;
 
 }
 
-/*Configurações do main*/
+nav > a{
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    font-weight: 600;
+    transition-duration: .3s;
+}
+
+nav > a:hover{
+    background-color: var(--cor3);
+    color: var(--cor5);
+    border-radius: 6px;
+}
 
 main{
-    background-color: #84E0AD;
-    
-}
-
-#principal{
     background-color: white;
-    width: 850px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    padding: 20px;
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.350);
+    border-radius: 0px 0px 10px 10px;
 }
 
-main > div > h1, h2{
-    font-family: leon;
-    color: #1D683E;
-    padding: 10px;
-    margin-left: 5px;
+main img{
+    width: 100%;
 }
 
-main > div h2{
-    background-image: linear-gradient(90deg,rgba(2, 189, 2, 0.234), white);
+main h1{
+    color: var(--cor5);
+    font-weight: normal;
+    font-size: 1.8em;
+    font-family: var(--fonte-android);
 }
 
-main > div > p{
-    font-family: Arial, Helvetica, sans-serif;
+main h2{
+    font-family: var(--fonte-android);
+    color: var(--cor4);
+    font-weight: normal;
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    text-indent: 8px;
+}
+
+main p{
+    margin: 15px 0px;
     text-align: justify;
-    margin: 15px;
-    text-indent: 16px;
+    text-indent: 30px;
+    font-size: 1.1em;
+    line-height: 2em;  /*altura entre cada linha do parágrafo*/
+}
+
+main a{
+    text-decoration: none;
     font-weight: bold;
-    
+    color: var(--cor5);
+    background-color: var(--cor2);
+    padding: 2px 6px;
 }
 
-.imagem{
-    padding: 10px 15px;
+main a:hover{
+    text-decoration: underline;
+    color: var(--cor1);
+    background-color: var(--cor4);
+}
+
+main strong{
+    color: var(--cor4);
+    font-weight: bold;
+}
+
+.pequena{
+    max-width: 350px;
+    display: block; /*para centralizar*/
     margin: auto;
 }
 
-#robozinho{
-    width: 300px;
-    margin: auto;
+/*Configuração para o vídeo ficar responsível*/
+.video{
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 56.5%;
+    position: relative;
 }
 
-#video{
-    margin: auto;
+.video > iframe{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
 }
 
-#divfundo{
-    background-color: #84E0AD;
-    margin: 15px;
-    border-radius: 15px;
-    box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.171);
+aside{
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.300);
 }
 
-main > div > div > h3{
-    background-color: #2baf66;
+aside ul{
+    list-style-type: '\2714\00a0\00a0'; /*emoji do site emojipidia*/
+    list-style-position: inside;
+    columns: 2;
+}
+
+aside > h3{
+    background-color: var(--cor4);
     color: white;
-    padding: 10px 0px 10px 10px;
-    border-radius: 15px 15px 0px 0px;
-    
-}
-
-#sectionfinal{
     padding: 10px;
-}
-
-#articleprincipal{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 10px;
-    margin-left: 0px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 
-
-/*Configuração do footer*/
 
 footer{
-    background-color: #1D683E;
-    color: rgba(255, 255, 255, 0.46);
+    background-color: var(--cor5);
+    color:rgba(255, 255, 255, 0.646);
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: .8em;
+    padding: 5px;
 }
 
-#span{
-    color: rgba(255, 255, 255, 0.63);
+footer a{
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover{
+    text-decoration: underline;
+    color: var(--cor1);
 }
